hugr-core/src/hugr/views/root_checked/snapshots/hugr_core__hugr__views__root_checked__dfg__test__map_io_duplicate_output.snap
---
source: hugr-core/src/hugr/views/root_checked/dfg.rs
expression: dfg_hugr.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        subgraph 1 ["(1) FuncDefn: #quot;main#quot;"]
            direction LR
            2["(2) Input"]
            3["(3) Output"]
            subgraph 4 ["(4) [**DFG**]"]
                direction LR
                style 4 stroke:#832561,stroke-width:3px
                5["(5) Input"]
                6["(6) Output"]
                5--"0:0<br>Bool"-->6
                5--"0:1<br>Bool"-->6
            end
            2--"0:0<br>Bool"-->4
            4--"0:0<br>Bool"-->3
            4--"1:1<br>Bool"-->3
        end
    end
